--- a/docs/_data/i18n/ru.yml
+++ b/docs/_data/i18n/ru.yml
@@ -134,6 +134,13 @@ home:
   grok-code-fast-1_api_title: ' Get Your API Key'
   grok-code-fast-1_api_links:
     - ' **Platform**: [https://console.x.ai](https://console.x.ai)'
+  longcat_description: '**LongCat** - это быстрая и эффективная модель ИИ, оптимизированная для интеграции с Claude Code, обеспечивающая отличную производительность для задач кодирования и разработки.'
+  longcat_models_title: Доступные модели
+  longcat_models:
+    - '**LongCat-Flash-Chat**: Эффективная модель, оптимизированная для сложного рассуждения и быстрых ответов'
+  longcat_api_title: Получить ключ API
+  longcat_api_links:
+    - '**Платформа**: [https://longcat.chat/platform/api_keys](https://longcat.chat/platform/api_keys)'
   model_config_title: Конфигурация моделей
   model_config_desc: 'Инструмент автоматически настраивает оптимальные модели для разных целей:'
   model_config_main: '**Основная модель**'
@@ -209,15 +216,10 @@ home:
     Официальные руководства по конфигурации провайдеров для интеграции Claude
     Code:
   references_links:
-    - >-
-      [DeepSeek Anthropic API
-      Guide](https://api-docs.deepseek.com/guides/anthropic_api)
-    - >-
-      [Alibaba Cloud Model Studio - Claude Code
-      Integration](https://help.aliyun.com/zh/model-studio/claude-code)
-    - >-
-      [Zhipu GLM - Claude Development
-      Guide](https://docs.bigmodel.cn/cn/guide/develop/claude)
+    - '[DeepSeek Anthropic API Guide](https://api-docs.deepseek.com/guides/anthropic_api)'
+    - '[Alibaba Cloud Model Studio - Claude Code Integration](https://help.aliyun.com/zh/model-studio/claude-code)'
+    - '[Zhipu GLM - Claude Development Guide](https://docs.bigmodel.cn/cn/guide/develop/claude)'
+    - '[LongCat - Claude Code Configuration Guide](https://longcat.chat/platform/docs/ClaudeCode.html)'
   grok_code_fast_1_description: >-
     **xAI Grok Code Fast 1** — это быстрый и эффективный языковой модель xAI,
     оптимизированный для задач кодирования и быстрого рабочего процесса
